<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/munchonlogo" />
            
        </RelativeLayout>
        
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </RelativeLayout>
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

             <TextView
                 android:id="@+id/txt_activity_placeorder_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="Takeaway" />

        </RelativeLayout>

         

    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical" >
    </LinearLayout> -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:baselineAligned="false"
        android:orientation="horizontal" >

       
            <ImageView
                android:id="@+id/imageView1"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_gravity="right"
                android:src="@drawable/munchonlogo" />
            
      
    
            <TextView
                android:id="@+id/txt_activity_placeorder_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:text="@string/take" />

    </RelativeLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/titlebarstyle"
              android:padding="2dp"
              android:baselineAligned="false"
              android:layout_weight="8" >
             
               <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:layout_weight="3" >
               <TextView
                      android:id="@+id/txt_item"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="12sp"
                      android:textColor="@android:color/white"
                      android:text="@string/item" />
                   </LinearLayout>
                   
                    <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2" >

                      <TextView
                      android:id="@+id/txt_qty"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="12sp"
                       android:textColor="@android:color/white"
                      android:layout_weight="3"
                      android:text="@string/qty" />
                      
                       <TextView
                      android:id="@+id/txt_price"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                       android:textColor="@android:color/white"
                      android:textSize="12sp"
                       android:layout_weight="3"
                      android:text="@string/price" />
                       
                        <TextView
                      android:id="@+id/txt_total"
                      android:layout_width="wrap_content"
                      android:textSize="12sp"
                       android:textColor="@android:color/white"
                       android:layout_weight="3" 
                      android:layout_height="wrap_content"
                      android:text="@string/total" />
                        
                        </LinearLayout>
           

          </LinearLayout>
           <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1" >

               <LinearLayout
                   android:id="@+id/lnr_orderd_items"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical" >

                   

               </LinearLayout>
                <LinearLayout
                    android:id="@+id/lnr_official"
                   android:layout_width="match_parent"
                     android:layout_below="@+id/lnr_orderd_items"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:orientation="vertical" >
                     <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                    >

                         <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                              android:textColor="@color/Munchon_gray"
                             android:text="@string/service" />

                            <TextView
                                android:id="@+id/txt_serviceamount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                 android:textColor="@color/Munchon_gray"
                                android:layout_alignParentTop="true"
                                android:text="$1.30" />
                         
                   </RelativeLayout>
                    <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                    >

                         <TextView
                             android:id="@+id/txt_total"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                              android:textColor="@color/Munchon_gray"
                             android:text="@string/amount" />

                            <TextView 
                                android:id="@+id/txt_totalamount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                 android:textColor="@color/Munchon_gray"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:text="$00.00" />
                         
                   </RelativeLayout>
               </LinearLayout>
               

          </RelativeLayout>

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

            
           
              <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:background="@drawable/titlebarstyle"
              android:layout_weight="8" >
                <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="" />
          </LinearLayout>
           <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="10dp"
              android:layout_weight="1" >

               
                
                 <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                    android:onClick="pickup"
                   android:paddingBottom="10dp"
                    >

                         <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                              android:textColor="@color/Munchon_gray"
                             android:text="@string/time" />

                            <TextView
                                android:id="@+id/txt_pickuptime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                 android:textColor="@color/Munchon_gray"
                                android:layout_alignParentTop="true"
                                android:text="5.15" />
                         
                   </RelativeLayout>
                    <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingTop="10dp"
                    >

                         <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                              android:textColor="@color/Munchon_gray"
                             android:gravity="center"
                             android:text="@string/email" />

                         <ImageView
                             android:id="@+id/img_activity_placeorder_emailstatus"
                             android:layout_width="80dp"
                             android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
                             android:tag="no"
                             android:background="@drawable/no"
                             />
                       
                   </RelativeLayout> 
                    
                     <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingTop="10dp"
                    >
                    <RelativeLayout 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:background="@drawable/button_background"
                        >
                        
                          <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textStyle="bold"
                             android:text="@string/add" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_background"
                        android:paddingBottom="2dp"
                        android:paddingLeft="15dp"
                        android:onClick="placeorder"
                        android:paddingRight="15dp"
                        android:paddingTop="2dp" >

                        <TextView
                            android:id="@+id/txt_service"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/order" />
                    </RelativeLayout>

                    </RelativeLayout>
                    
          </LinearLayout>
    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
