<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

         <LinearLayout
             android:id="@+id/lnr_fragment_accountdetails_firstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:background="@drawable/layout_bottom_border"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/lbl_firstname"
                 android:layout_width="wrap_content"  
                 android:layout_height="wrap_content"
                 android:text="First Name" 
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/txt_graylight" />
              
                

                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/txt_graydark"
                    android:hint="First Name" 
                    android:background="#00000000"
                    android:inputType="textPersonName" >
                    <requestFocus />
                </EditText>

         </LinearLayout>

          <LinearLayout
        android:id="@+id/lnr_fragment_accountdetails_lastname"
        android:layout_width="match_parent"
          android:padding="5dp"
            android:background="@drawable/layout_bottom_border"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                
          <TextView
                 android:id="@+id/lbl_lastname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Last Name"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/txt_graylight" />
             
                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                     android:textColor="@color/txt_graydark"
                    android:hint="Last Name" 
                    android:background="#00000000"
                    android:inputType="textPersonName" >
                   
                </EditText>
    </LinearLayout>
    
  
     <LinearLayout
        android:id="@+id/lnr_fragment_accountdetails_email"
        android:layout_width="match_parent"
          android:padding="5dp"
            android:background="@drawable/layout_bottom_border"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
         
          <TextView
                 android:id="@+id/lbl_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/txt_graylight" />
             
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email" 
                     android:textColor="@color/txt_graydark"
                    android:background="#00000000"
                    android:inputType="textPersonName" >
                  
                </EditText>
                
                
    </LinearLayout>
     

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
       
         android:orientation="vertical" >
                
         <LinearLayout
             android:id="@+id/lnr_save"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:background="@drawable/roundborder_light"
                        >
                        
                          <TextView
                             android:id="@+id/txt_service"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"  
                             android:gravity="center"
                             android:textColor="@color/txt_graylight"
                              android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="@string/save" />
                    </LinearLayout>
                    
         <LinearLayout
             android:id="@+id/lnr_change"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:paddingRight="15dp"
                          android:layout_margin="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:background="@drawable/roundborder_light"
                        >
                        
                          <TextView
                             android:id="@+id/txt_bservice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"  
                             android:gravity="center"
                             android:textColor="@color/txt_graylight"
                              android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="@string/change_pass" />
                    </LinearLayout>
                    
         <LinearLayout
                android:id="@+id/lnr_address"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="2dp"
                          android:layout_margin="15dp"
                        android:paddingBottom="2dp"
                        android:gravity="center"
                        android:background="@drawable/roundborder_light"
                        >
                        
                          <TextView
                             android:id="@+id/txt_fservice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"  
                             android:gravity="center"
                             android:textColor="@color/txt_graylight"
                              android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="@string/address" />
                    </LinearLayout>
     </LinearLayout>
     
</LinearLayout>
